Add i18n German (de) translation support

--- a/docs/i18n.md
+++ b/docs/i18n.md
@@ -30,6 +30,9 @@ vibealive analyze . --locale es
 # Use French  
 vibealive analyze . --locale fr
 
+# Use German
+vibealive analyze . --locale de
+
 # Use Japanese
 vibealive analyze . --locale ja
 ```
