feat: Add Portuguese language support

--- a/docs/i18n.md
+++ b/docs/i18n.md
@@ -35,6 +35,9 @@ vibealive analyze . --locale de
 
 # Use Japanese
 vibealive analyze . --locale ja
+
+# Use Portuguese
+vibealive analyze . --locale pt
 ```
 
 ### Configuration File
